# queryer

./: .gitignore  Cargo.toml
examples/: query.rs
queryer-c/: CMakeLists.txt  Cargo.toml  Makefile  bindings.h  build.rs  query.c
queryer-c/src/: lib.rs
queryer-py/: Cargo.toml  README.md
queryer-py/src/: lib.rs
queryer-rs/: Cargo.toml
queryer-rs/examples/: data.json  query.rs
queryer-rs/src/: ast_convert.rs  dialect.rs  fetcher.rs  filetype.rs  lib.rs  transformer.rs
src/: dialect.rs  fetcher.rs  lib.rs
