[package]
name = "queryer-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "queryer_py"
crate-type = ["cdylib"]

[dependencies]
queryer-rs = { path = "../queryer-rs" }
tokio = { version = "1.20.0", features = ["full"] }
pyo3 = { version = "0.17.3", features = ["extension-module"] }

[build-dependencies]
pyo3-build-config = "0.17.3"

