[package]
name = "queryer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "query"

[dependencies]
bytes = "1.1.0"
tracing = "0.1"
tokio = { version = "1.20.0", features = ["full"] }
tracing-subscriber = "0.2.0"
futures = "0.3"
tokio-util = { version = "0.7.3", features = ["compat", "codec"]}
tokio-stream = "0.1.11"
anyhow = "1.0.68"
reqwest = "0.11.13"
polars = {version = "0.26.1", features = ["json", "lazy"]}
sqlparser = "0.10"

